--- a/src/EcoLogic/pages/dashboard/style.css
+++ b/src/EcoLogic/pages/dashboard/style.css
@@ -174,6 +174,58 @@ article span {
     background: #8DB5AD;
 }
 
+.barradireita {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    top: 6rem;
+}
+
+.barradireita img {
+    width: 766px;
+    height: auto;
+    margin-right: 0;
+}
+
+.texto-sobre-imagem {
+    position: absolute;
+    top: 50%;
+    right: 50px;
+    transform: translateY(-50%);
+    display: flex;
+    width: 442px;
+    height: 69px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.texto-sobre-imagem p {
+    position: absolute;
+    font-size: 32px;
+    top: 40%;
+    right: 80px;
+    transform: translateY(-50%);
+    color: #fff;
+    text-align: center;
+    z-index: 1;
+    display: flex;
+    width: 442px;
+    height: 69px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.numero-usinas {
+    position: absolute;
+    color: #fff;
+    font-family: "Saira Stencil One";
+    font-size: 64px;
+    bottom: 10px;
+}
+
 footer {
     width: 100%;
     height: 175px;
