--- a/src/EcoLogic/pages/dashboard/style.css
+++ b/src/EcoLogic/pages/dashboard/style.css
@@ -98,23 +98,23 @@ article span {
     font-weight: 275;
     line-height: 40px;
     letter-spacing: 0.5px;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
+    margin-bottom: 6rem;
+    margin-top: 2.6rem;
+
 }
 
 .container {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    width: 100%;
-    padding: 80px;
+    width: 80%;
 }
 
 .content {
     width: 100%;
     display: flex;
-    padding: 16px;
     text-align: left;
+    
 }
 
 .titulo1 {
@@ -122,7 +122,6 @@ article span {
     color: #F3F3F3;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-family: "Saira Condensed";
-    font-size: 32px;
     font-style: normal;
     line-height: 40px;
     letter-spacing: 0.5px;
@@ -149,6 +148,7 @@ article span {
 .energiaeolica {
     display: flex;
     margin: -40px;
+    margin-top: -6rem;
 }
 
 .energiaeolica img {
@@ -179,7 +179,7 @@ article span {
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    top: 6rem;
+    top: 4rem;
 }
 
 .barradireita img {
@@ -223,8 +223,94 @@ article span {
     color: #fff;
     font-family: "Saira Stencil One";
     font-size: 64px;
-    bottom: 10px;
+    bottom: -3.2rem;
 }
+
+
+.container1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 80%;
+}
+
+
+.content1 {
+    width: 100%;
+    display: flex;
+    text-align: left;
+}
+
+.grafico1 {
+    display: flex;
+    margin-top: 60px;
+}
+
+.grafico1 img {
+    width: 593px;
+    margin-left: -70px; 
+}
+
+.titulo2 {
+    display: flex;
+    flex-shrink: 0;
+    color: #F3F3F3;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: "Saira Condensed";
+    line-height: 100px;
+    letter-spacing: 0.5px;
+    margin-left: 7rem;
+    margin-top: 5.6rem;
+    justify-content: center;
+
+}
+
+.titulo2 span {
+    
+    display: flex;
+    font-size: 21px;
+    text-align: justify;
+
+}
+
+.text2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #F3F3F3;
+    font-family: "Saira Condensed";
+    font-size: 21px;
+    line-height: 50px;
+    letter-spacing: 0.5px;
+}
+
+.text2 ul {
+    position:absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #F3F3F3;
+    font-family: "Saira Condensed";
+    font-size: 21px;
+    font-weight: 100;
+    letter-spacing: 0.5px;
+    margin-left: 8rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 footer {
     width: 100%;
