--- a/projeto-concreta/src/app/pages/obra-andamento/obra-andamento.component.html
+++ b/projeto-concreta/src/app/pages/obra-andamento/obra-andamento.component.html
@@ -1,4 +1,53 @@
 <app-navbar/>
-<br>
-<app-footer/>
+
+<div class="container" style="margin-top: 100px;">
+    <h2 style=" text-align: center;">OBRAS EM ANDAMENTO</h2>
+    <div class="content">
+      
+      <table>
+        <thead>
+          <tr>
+            <th>Nome da obra</th>
+            <th>Construtora</th>
+            <th>Localização</th>
+            <th>Última atualização</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+    <div class="buttons" style="margin-top: 50px;">
+        <button class="btn back">🔙 Voltar para o menu</button>
+        <button class="btn load-more">Carregar mais obras 🔜</button>
+      </div>
+  </div>
+  
+
+<!-- <app-footer/> -->
 
