--- a/projeto-concreta/WebSites/src/app/pages/cadastro-user/cadastro-user.component.scss
+++ b/projeto-concreta/WebSites/src/app/pages/cadastro-user/cadastro-user.component.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 .h-screen {
   height: 100vh;
@@ -27,7 +27,7 @@
 }
 
 .input-field {
-  width: 74%;
+  width: 80%;
   height: 38px;
   border-radius: 8px;
   padding: 1rem;
@@ -49,7 +49,7 @@
   padding: 0.5rem;
   cursor: pointer;
   font-size: 0.8rem;
-  font-family:sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   margin-top: 1rem;
 }
 
@@ -69,7 +69,7 @@
   color:#F2B705;
   margin-bottom: 0.5rem; 
   font-size: 0.9rem;
-  margin-left: 75px;
+  margin-left: 57px;
 }
 
 .flex {
@@ -81,7 +81,7 @@
 .field label {
   display: flex;
   align-items: center; 
-  margin-right: -1rem;
+  margin-right: 3rem;
   font-size: 0.8rem;
 }
 
