--- a/projeto-concreta/WebSites/src/app/pages/cadastro-user/cadastro-user.component.scss
+++ b/projeto-concreta/WebSites/src/app/pages/cadastro-user/cadastro-user.component.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 .h-screen {
   height: 100vh;
@@ -49,7 +49,8 @@
   padding: 0.5rem;
   cursor: pointer;
   font-size: 0.8rem;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
   margin-top: 1rem;
 }
 
