--- a/src/EcoLogic/pages/dashboard/style.css
+++ b/src/EcoLogic/pages/dashboard/style.css
@@ -100,7 +100,6 @@ article span {
     letter-spacing: 0.5px;
     margin-bottom: 6rem;
     margin-top: 2.6rem;
-
 }
 
 .container {
@@ -114,7 +113,6 @@ article span {
     width: 100%;
     display: flex;
     text-align: left;
-    
 }
 
 .titulo1 {
@@ -226,14 +224,12 @@ article span {
     bottom: -3.2rem;
 }
 
-
 .container1 {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     width: 80%;
 }
-
 
 .content1 {
     width: 100%;
@@ -248,7 +244,7 @@ article span {
 
 .grafico1 img {
     width: 593px;
-    margin-left: -70px; 
+    margin-left: -70px;
 }
 
 .titulo2 {
@@ -262,15 +258,12 @@ article span {
     margin-left: 7rem;
     margin-top: 10rem;
     justify-content: center;
-
 }
 
 .titulo2 span {
-    
     display: flex;
     font-size: 21px;
     text-align: justify;
-
 }
 
 .text2 {
@@ -286,7 +279,7 @@ article span {
 }
 
 .text2 ul {
-    position:absolute;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -297,7 +290,6 @@ article span {
     letter-spacing: 0.5px;
     margin-left: 8rem;
 }
-
 
 .barraesquerda {
     position: relative;
@@ -390,7 +382,6 @@ article span {
     margin-right: 0;
 }
 
-
 .texto-sobre-imagem2 {
     position: absolute;
     top: 50%;
@@ -430,7 +421,6 @@ article span {
     left: 35rem;
 }
 
-
 .energiageotermica {
     display: flex;
     margin: -40px;
@@ -442,7 +432,6 @@ article span {
     width: 760px;
     right: 0.1rem;
 }
-
 
 #sobre-nos h1 {
     flex-shrink: 0;
@@ -473,9 +462,7 @@ article span {
     font-weight: 250;
     line-height: 50px;
     letter-spacing: 0.5px;
-    
 }
-
 
 #missao h1 {
     color: #F3F3F3;
@@ -484,12 +471,11 @@ article span {
     font-style: normal;
     line-height: 40px;
     letter-spacing: 0.5px;
-    margin-left: 66rem; /* Reduzido de 66rem */
+    margin-left: 66rem;
     font-size: 26px;
-    margin-bottom: 3rem; /* Reduzido de 12rem */
-    margin-top: 4rem; /* Reduzido de 26rem */
+    margin-bottom: 3rem;
+    margin-top: 4rem;
 }
-
 
 #missao p {
     display: flex;
@@ -509,7 +495,6 @@ article span {
     margin-left: 46rem;
 }
 
-
 .biomassa {
     display: flex;
     margin: 40px;
@@ -522,11 +507,10 @@ article span {
     margin-top: -14rem;
 }
 
-
 .pcgraficos2 {
     display: flex;
     margin: -40px;
-    margin-top: 16rem;
+    margin-top: 26rem;
 }
 
 .pcgraficos2 img {
@@ -535,10 +519,8 @@ article span {
     right: 2rem;
 }
 
-
-
-/* Estilo para o título Resultados */
-#resultados h1 {
+.titulo5 {
+    display: flex;
     flex-shrink: 0;
     color: #F3F3F3;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -546,88 +528,108 @@ article span {
     font-style: normal;
     line-height: 40px;
     letter-spacing: 0.5px;
-    margin-right: 66rem;
-    margin-top: 30rem;
+    margin-top: 36rem;
     font-size: 26px;
     margin-bottom: 2rem;
-}
-
-
-
-/* Estilizando os itens de lista */
-#resultados ul li {
-    display: flex;
-    width: 394px;
-    height: 272px;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
-    color: #F3F3F3;
-    text-align: justify;
-    font-family: "Saira Condensed";
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 250;
-    line-height: 50px;
-    letter-spacing: 0.5px;
-}
-
-#resultados ul li svg {
-    margin-right: 6px;
-}
-
-/* Posicionamento das listas lado a lado */
-#resultados {
-    display: flex;
-    flex-direction: column;
+    margin-right: 50rem;
 }
 
 #resultados ul {
     list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-/* Estilizando os itens de lista */
-#resultados1 ul li {
-    display: flex;
-    width: 394px;
-    height: 272px;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
+    gap: 100px 100px;
     color: #F3F3F3;
     text-align: justify;
     font-family: "Saira Condensed";
-    font-size: 21px;
+    font-size: 20px;
     font-style: normal;
-    font-weight: 250;
-    line-height: 50px;
+    letter-spacing: 0.5px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 4rem;
+}
+
+#resultados ul li {
+    display: flex;
+    max-width: 390px;
+    color: #F3F3F3;
+    text-align: justify;
+    font-family: "Saira Condensed";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 100;
+    letter-spacing: 0.5px;
+    background-color: rgba(154, 150, 150, 0.2);
+    box-shadow: #494747;
+    border-radius: 8px;
+    justify-content: center;
+    padding: 10px;
+}
+
+#resultados ul li svg {
+    width: 100%;
+    margin: auto;
+    margin-top: 8px;
+    margin-right: 1rem;
+}
+
+#infofinal p {
+    font-size: 28px;
+    color: #fff;
+    margin-top: 6rem;
+    margin-left: 27rem;
+}
+
+#infofinal {
+    margin-top: 6rem;
+}
+
+.logosemfundo {
+    margin-top: 16rem;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.logosemfundo img {
+    width: 320px;
+    height: 121px;
+}
+
+.contato,
+.endereco,
+.horario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+}
+
+.contato ul,
+.endereco ul,
+.horario span {
+    list-style: none;
+    font-size: 18px;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10rem;
+    font-family: "Saira Condensed";
+    font-style: normal;
+    font-weight: 100;
+    line-height: 30px;
     letter-spacing: 0.5px;
 }
 
-#resultados1 ul li svg {
-    margin-right: 6px;
+.contato {
+    margin-top: 5rem;
 }
 
-/* Posicionamento das listas lado a lado */
-#resultados1 {
-    display: flex;
-    flex-direction: column;
+.horario {
+    margin-bottom: 6rem;
 }
-
-#resultados1 ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-
-
-
-
 
 footer {
     width: 100%;
@@ -664,12 +666,6 @@ footer {
     height: 24px;
 }
 
-
-
-
-
-
-
 @media (max-width: 768px) {
     .logo img {
         width: 180px;
@@ -689,7 +685,6 @@ footer {
         font-size: 14px;
     }
 }
-
 
 @media (max-width: 480px) {
     header {
@@ -719,5 +714,25 @@ footer {
     .social-icons img {
         width: 20px;
         height: 20px;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .container,
+    .container1,
+    .content,
+    .content1 {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    body {
+        font-size: 0.875rem;
+    }
+
+    .botaonavbar button {
+        width: 100%;
+        margin: 10px 0;
     }
 }
