--- a/projeto-concreta/WebSites/src/app/contato/contato.component.html
+++ b/projeto-concreta/WebSites/src/app/contato/contato.component.html
@@ -1,7 +1,7 @@
 <h2>Fale Conosco</h2>
-<form (ngSubmit)="enviarFormulario()">
-    <input type="text" name="nome" placeholder="Nome" required />
-    <input type="email" name="email" placeholder="E-mail" required />
-    <textarea name="mensagem" placeholder="Mensagem" required></textarea>
-    <button type="submit">Enviar</button>
+<form [formGroup]="formGroup">
+    <input type="text" formControlName="nome" placeholder="Nome" required />
+    <input type="email" formControlName="email" placeholder="E-mail" required />
+    <textarea formControlName="mensagem" placeholder="Mensagem" required></textarea>
+    <button type="submit" (click)="enviarFormulario()">Enviar</button>
 </form>
