--- a/src/EcoLogic/pages/contato/style.css
+++ b/src/EcoLogic/pages/contato/style.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    font-size: 1rem; 
+    font-size: 1rem;
 }
 
 header {
@@ -57,10 +57,6 @@ header {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
-    top: 51px;
-    left: 1117px;
-    gap: 0px;
-    opacity: 0px;
 }
 
 .botaonavbar button:hover {
@@ -68,7 +64,182 @@ header {
 }
 
 main {
-    flex: 0%;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+article {
+    text-align: center;
+    max-width: 800px;
+    width: 100%;
+    padding: 0 15px;
+}
+
+article h1 h2 p {
+    text-align: center;
+}
+
+h1 {
+    margin: 20px 0;
+    color: #F3F3F3;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: "Saira Condensed";
+    font-size: 32px;
+    font-weight: 475;
+    line-height: 40px;
+    letter-spacing: 0.5px;
+    margin-bottom: 4rem;
+    margin-top: 8rem;
+}
+
+h2 {
+    margin: 15px 0;
+    color: #F3F3F3;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: "Saira Condensed";
+    font-size: 32px;
+    font-weight: 275;
+    line-height: 40px;
+    letter-spacing: 0.5px;
+    margin-bottom: 6rem;
+    margin-top: 2.6rem;
+    background-color: #1D6B59;
+    padding: 15px 20px;
+    display: inline-block;
+}
+
+p {
+    width: 100%;
+    color: #F3F3F3;
+    text-align: center;
+    justify-content: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: "Saira Condensed";
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 275;
+    line-height: 1.5;
+    letter-spacing: 0.5px;
+    margin-bottom: 6rem;
+    margin-top: 1rem;
+}
+
+.contact-form {
+    max-width: 600px;
+    width: 100%;
+    margin: auto;
+    color: #F3F3F3;
+    font-family: "Saira Condensed";
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 100;
+    line-height: 50px;
+    letter-spacing: 0.5px;
+    margin-top: 46px;
+}
+
+.input-group {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+    color: #F3F3F3;
+    font-family: "Saira Condensed";
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 100;
+    line-height: 50px;
+    letter-spacing: 0.5px;
+}
+
+.input-group input {
+    width: 48%;
+    padding: 16px;
+    border: 1px solid #8DB5AD;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background: #8DB5AD;
+    color: #F3F3F3;
+}
+
+input::placeholder,
+textarea::placeholder {
+    color: #FFFFFF;
+    opacity: 0.8;
+}
+
+textarea {
+    width: 100%;
+    padding: 16px;
+    margin-bottom: 15px;
+    border: 1px solid #8DB5AD;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background: #8DB5AD;
+}
+
+.terms-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 1px;
+    color: #F3F3F3;
+    font-size: 13px;
+    text-align: justify;
+
+}
+
+.terms-container input[type="checkbox"] {
+    margin: 0;
+    margin-bottom: 2.4rem;
+}
+
+.terms-container label {
+    line-height: 1.6;
+    margin: 0;
+    width: 385px;
+    height: auto;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+button,
+.btn-enviar {
+    padding: 13px 50px;
+    background-color: #1D6B59;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+    font-size: 18px;
+    backdrop-filter: blur(4px);
+    box-shadow: 0px 4px 4px 0px #00000040 inset;
+    margin-left: auto;
+}
+
+button:hover,
+.btn-enviar:hover {
+    background-color: #548d80;
+}
+
+.logosemfundo {
+    margin-top: 16rem;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.logosemfundo img {
+    width: 320px;
+    height: 121px;
+    margin-right: 29rem;
+    margin-bottom: 16px
+}
+
+#infofinal p {
+    margin-bottom: 16rem;
 }
 
 footer {
@@ -93,6 +264,7 @@ footer {
 .footer-content p {
     margin: 12px 0;
     margin-top: 36px;
+    font-size: 16px;
 }
 
 .social-icons {
