--- a/src/EcoLogic/pages/adm/style.css
+++ b/src/EcoLogic/pages/adm/style.css
@@ -8,10 +8,12 @@
 body {
     background: #000;
     color: #fff;
+    font-family: 'Saira Condensed', sans-serif;
     display: flex;
     flex-direction: column;
     height: 100vh;
-    font-size: 1rem; 
+    font-size: 1rem;
+    margin: 0;
 }
 
 header {
@@ -19,6 +21,9 @@ header {
     width: 100%;
     height: 175px;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
+    position: fixed; /* Fixar o header no topo */
+    top: 0;
+    z-index: 1; /* Colocar o header acima do aside */
 }
 
 .logo img {
@@ -68,18 +73,31 @@ header {
     background-color: #8DB5AD;
 }
 
+.main-container {
+    display: flex;
+    width: 100%; /* Ocupa toda a largura disponível */
+    max-width: 2426px; /* Define uma largura máxima maior */
+    min-height: 100vh; /* Garante que a altura seja ao menos da viewport */
+    margin: 0 auto; /* Centraliza o contêiner */
+    padding: 20px; /* Aumenta o espaçamento interno */
+    gap: 20px; /* Espaçamento entre os elementos filhos */
+}
+
 aside {
     background: #1D6B59;
     width: 375px;
-    height: 1028px;
+    max-width: 2426px;
+    min-height: 100vh;
     box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25) inset;
-    top: 175px;
-    gap: 0px;
-    opacity: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
+    position: fixed; /* Adiciona uma posição fixa ao lado esquerdo */
+    top: 175px; /* Posiciona o aside abaixo do header */
+    left: 0;
+    justify-content: space-between;
+    padding: 20px;
 }
 
 .search-bar {
@@ -241,6 +259,8 @@ aside {
     background-color: #8DB5AD;
 }
 
+
+
 .botaosair button {
     display: flex;
     width: 163px;
@@ -263,11 +283,61 @@ aside {
     backdrop-filter: blur(4px);
     box-shadow: 0px 4px 4px 0px #00000040 inset;
     margin-top: 16rem;
+    margin-bottom: 16rem;
 }
 
 .botaonsair button:hover {
     background-color: #8DB5AD;
 }
+
+main {
+    flex: 1;
+    margin-left: 375px; /* Espaçamento para que o main não sobreponha o aside */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+article {
+    text-align: center;
+    max-width: 800px;
+    width: 100%;
+    padding: 0 15px;
+}
+
+article h1 h2 p {
+    text-align: center;
+}
+
+h1 {
+    margin: 20px 0;
+    color: #F3F3F3;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: "Saira Condensed";
+    font-size: 32px;
+    font-weight: 475;
+    line-height: 40px;
+    letter-spacing: 0.5px;
+    margin-bottom: 4rem;
+    margin-top: 8rem;
+}
+
+h2 {
+    margin: 15px 0;
+    color: #F3F3F3;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: "Saira Condensed";
+    font-size: 32px;
+    font-weight: 275;
+    line-height: 40px;
+    letter-spacing: 0.5px;
+    margin-bottom: 6rem;
+    margin-top: 2.6rem;
+    padding: 15px 20px;
+    display: inline-block;
+}
+
 
 footer {
     width: 100%;
@@ -291,6 +361,7 @@ footer {
 .footer-content p {
     margin: 12px 0;
     margin-top: 36px;
+    font-size: 16px;
 }
 
 .social-icons {
